# django-uv-zed-init

./: manage.py  pyproject.toml
.zed/: settings.json
flags/: views.py
lsrs/: asgi.py  settings.py  urls.py  wsgi.py
